fix form error text spacing

--- a/workspace/apps/pidp/src/app/features/access/pages/bc-provider-application/bc-provider-application.page.scss
+++ b/workspace/apps/pidp/src/app/features/access/pages/bc-provider-application/bc-provider-application.page.scss
@@ -74,9 +74,9 @@ ol {
   --header-margin: var(--gap) 0 0;
   --content-padding: var(--gap) 0;
   --password-splash-display: unset;
-    --password-splash: {
-    flex: 1
-  }
+  --password-splash: {
+    flex: 1;
+  };
 }
 .viewport-large {
   --header-margin: var(--gap) 0 0;
@@ -372,12 +372,11 @@ ol {
   & .help-link {
     font-size: 0.75rem;
   }
-  & .mobile-image{
+  & .mobile-image {
     & img {
       display: none;
     }
   }
-
 }
 .viewport-all.dialog-box {
   padding: 24px;
@@ -439,7 +438,7 @@ ol {
       }
     }
   }
-  & .mobile-image{
+  & .mobile-image {
     & img {
       display: block;
       max-width: 100%;
@@ -449,6 +448,13 @@ ol {
   }
   & .form-card {
     display: block !important;
+    & .form-content {
+      & .field {
+        & .mat-mdc-form-field {
+          margin-bottom: 18px !important;
+        }
+      }
+    }
   }
   & .password-splash {
     & .password-splash-content {
